<resources>
    <string name="app_name">GraffiTab</string>
    <string name="facebook_app_id">427845203916953</string>
    <string name="instabug_token">95a2ae49aceb3d7c2b0d32c573a6231f</string>
    <string name="transition_name_streamable">TRANSITION:streamable</string>
    <string name="onboard_go">Let\'s go!</string>
    <string name="onboard_screen_1_title">Paint</string>
    <string name="onboard_screen_1_description">Creating beautiful art is as easy as moving your finger across the canvas.</string>
    <string name="onboard_screen_2_title">Enhance</string>
    <string name="onboard_screen_2_description">Make your drawing stand out with a variety of filters and effects.</string>
    <string name="onboard_screen_3_title">Explore</string>
    <string name="onboard_screen_3_description">Discover what your friends are creating around your area.</string>
    <string name="onboard_screen_4_title">Follow</string>
    <string name="onboard_screen_4_description">Follow your favourite artists and get instant updates about new content.</string>
    <string name="onboard_screen_5_title">Profile</string>
    <string name="onboard_screen_5_description">Everything you make is stored in your creative profile. Ready to get started?</string>
    <string name="avatar_prompt_go">Say \"Cheese!\"</string>
    <string name="avatar_prompt_later">I\'ll do it later</string>
    <string name="login_hint_username">Username</string>
    <string name="login_hint_password">Password</string>
    <string name="login_forgotten_password">Forgot?</string>
    <string name="login">Login</string>
    <string name="login_facebook">Facebook Connect</string>
    <string name="login_sign_up_prompt">Don\'t have an account yet? Sign up</string>
    <string name="login_sign_up">Sign up</string>
    <string name="login_or">or</string>
    <string name="login_error_username">Please enter your username.</string>
    <string name="login_error_password">Please enter your password.</string>
    <string name="login_error_credentials">These credentials are incorrect. Please try again.</string>
    <string name="login_username_prompt">Pick a username for your account.</string>
    <string name="login_signout">Not %1$s? Switch account</string>
    <string name="login_switch_account">Switch account</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_detail">You will receive an email containing instructions on how to reset your password.</string>
    <string name="reset_password_hint_email">Email</string>
    <string name="reset_password_reset">Reset</string>
    <string name="permissions_decide_later">I\'ll do it later</string>
    <string name="permissions_storage_title">Save Pictures</string>
    <string name="permissions_storage_description">We\'ll make saving pictures to your device as easy as possible. We just need your permission first.\n\nOtherwise you won\'t be able to upload pictures or change your avatar.</string>
    <string name="permissions_storage_button">Allow Access</string>
    <string name="permissions_camera_title">Camera and Photos</string>
    <string name="permissions_camera_description">In order to use photos from your device, we need your permission first.\n\nPhotos will never be posted without your consent.</string>
    <string name="permissions_camera_button">Use Photos</string>
    <string name="permissions_location_title">Location Services</string>
    <string name="permissions_location_description">In order to use the Explorer or post to the map, we need to know your location.\n\nOtherwise, you can still draw and publish graffiti but they won\'t appear on the map.</string>
    <string name="permissions_location_button">Use Location Services</string>
    <string name="permissions_camera_storage_title">Camera and Photos</string>
    <string name="permissions_camera_storage_description">In order to use photos from your device, we need your permission first.\n\nPhotos will never be posted without your consent.</string>
    <string name="permissions_camera_storage_button">Use Photos</string>
    <string name="sign_up">Sign me up</string>
    <string name="sign_up_first_name">First name</string>
    <string name="sign_up_last_name">Last name</string>
    <string name="sign_up_confirm_password">Confirm password</string>
    <string name="sign_up_terms">By registering you agree to our Terms of Use</string>
    <string name="sign_up_terms_of_use">Terms of Use</string>
    <string name="sign_up_error_firstname">Please enter your first name.</string>
    <string name="sign_up_error_lastname">Please enter your last name.</string>
    <string name="sign_up_error_email">Please enter your email.</string>
    <string name="sign_up_error_username">Please enter a username.</string>
    <string name="sign_up_error_password">Please enter a password.</string>
    <string name="sign_up_error_confirm_password">Passwords do not match.</string>
    <string name="sign_up_error_invalid_email">This email address is not valid.</string>
    <string name="sign_up_confirmation_title">Almost done!</string>
    <string name="sign_up_confirmation_detail">You have successfully registered! Please check your email to activate your account.</string>
    <string name="home">Home</string>
    <string name="home_trending">Trending</string>
    <string name="home_notifications">Notifications</string>
    <string name="home_recent">Recent</string>
    <string name="home_profile">Profile</string>
    <string name="home_locations">Locations</string>
    <string name="home_search">Search</string>
    <string name="home_settings">Settings</string>
    <string name="home_explorer">Explorer</string>
    <string name="home_exit_prompt">Please press BACK again to exit</string>
    <string name="feed_empty_title">Your feed is empty</string>
    <string name="feed_empty_description">How about drawing your first sketch?</string>
    <string name="search_graffitab">Search GraffiTab</string>
    <string name="search_people">People</string>
    <string name="search_graffiti">Graffiti</string>
    <string name="notifications_empty_title">No notifications</string>
    <string name="notifications_empty_description">Looks like you have no notifications yet.</string>
    <string name="notifications_follow">%1$s started following you.</string>
    <string name="notifications_comment">%1$s commented on your graffiti:</string>
    <string name="notifications_like">%1$s liked your graffiti.</string>
    <string name="notifications_mention">%1$s mentioned you in a comment:</string>
    <string name="notifications_welcome">Welcome to GraffiTab!</string>
    <string name="notifications_welcome_description">Now that you have signed up, you can quickly start creating amazing graffiti and share them with your comminuty. If you get stuck, feel free to check out the tutorials again in Settings.</string>
    <string name="locations">Locations</string>
    <string name="locations_menu_title">What would you like to do with this place?</string>
    <string name="locations_copy_address">Copy address</string>
    <string name="profile_graffiti">graffiti</string>
    <string name="profile_followers">followers</string>
    <string name="profile_following">following</string>
    <string name="profile_change_avatar_success">Avatar updated</string>
    <string name="profile_change_cover_success">Cover updated</string>
    <string name="profile_follow">follow</string>
    <string name="likes">Likes</string>
    <string name="likes_likers">Likers</string>
    <string name="likes_like">Like</string>
    <string name="likes_liked">Liked</string>
    <string name="likes_count">%1$d Like</string>
    <string name="likes_count_plural">%1$d Likes</string>
    <string name="comments">Comments</string>
    <string name="comments_comment">Comment</string>
    <string name="comments_hint">Write your comment here</string>
    <string name="comments_menu_title">What would you like to do with this comment?</string>
    <string name="comments_count">%1$d Comment</string>
    <string name="comments_count_plural">%1$d Comments</string>
    <string name="comments_error_title">This comment was not sent.</string>
    <string name="comments_edited">(edited)</string>
    <string name="mentions">Mentioned in</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="following_unfollow">Unfollow</string>
    <string name="following_unfollow_user">Unfollow %1$s?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_avatar">Profile Picture</string>
    <string name="edit_profile_cover">Cover Picture</string>
    <string name="edit_profile_header_private">Private Graffiti</string>
    <string name="edit_profile_manage_private">Manage Private Graffiti</string>
    <string name="edit_profile_change_password">Change Password</string>
    <string name="edit_profile_about">About</string>
    <string name="edit_profile_website">Website</string>
    <string name="edit_profile_private_description">Private graffiti can only be viewed by you</string>
    <string name="edit_profile_success">Profile updated</string>
    <string name="explorer">Explorer</string>
    <string name="explorer_save_location_prompt">Save this area to your Locations?</string>
    <string name="explorer_error_refresh">Couldn\'t refresh map</string>
    <string name="create_location_no_matches">No address matches found.</string>
    <string name="create_location_success">Location saved successfully. Now you will get notifications when new content is available around that area.</string>
    <string name="private_posts">Private Graffiti</string>
    <string name="change_password_current">Your password</string>
    <string name="change_password_new">New password</string>
    <string name="change_password_error_password">Please enter your current password.</string>
    <string name="change_password_success">Password updated</string>
    <string name="static_streamables_count">%1$d graffiti</string>
    <string name="static_users_count">%1$d people</string>
    <string name="cluster_streamables_count">%1$d discovered</string>
    <string name="linked_accounts_find_friends">Find Friends</string>
    <string name="linked_accounts_account">Account</string>
    <string name="linked_accounts_unlink">Unlink</string>
    <string name="settings_account">Account</string>
    <string name="settings_edit_profile">Edit Profile</string>
    <string name="settings_liked">Posts You\'ve Liked</string>
    <string name="settings_remember_me">Remember Me</string>
    <string name="settings_remember_me_description">Remembers your login credentials and autofills them in case your log out.</string>
    <string name="settings_discover">Discover</string>
    <string name="settings_find_facebook_friends">Find Facebook Friends</string>
    <string name="settings_followers_activity">Followers Activity</string>
    <string name="settings_linked_accounts">Linked Accounts</string>
    <string name="settings_clear_cache">Clear App Cache</string>
    <string name="settings_drawing_assistant">Show Drawing Assistant</string>
    <string name="settings_support">Support</string>
    <string name="settings_help_center">Help Center</string>
    <string name="settings_report_problem">Report a Problem</string>
    <string name="settings_about">About</string>
    <string name="settings_eula">End User License Agreement</string>
    <string name="settings_logout">Log out</string>
    <string name="streamable_details_mark_public">Mark Public</string>
    <string name="streamable_details_save">Save to Photos Album</string>
    <string name="streamable_details_flag">Flag Inappropriate</string>
    <string name="streamable_details_explore">Explore Map Area</string>
    <string name="other_edit">Edit</string>
    <string name="other_delete">Delete</string>
</resources>