<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:paddingLeft="23dp"
            android:paddingRight="23dp"
            android:paddingTop="20dp">

            <ImageButton
                android:id="@+id/closeBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginRight="-12dp"
                android:layout_marginTop="-10dp"
                android:background="@null"
                android:src="@drawable/ic_close_white_24dp"
                android:tint="@color/colorResetPasswordWhite"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:layout_marginTop="30dp"
                android:text="@string/login_sign_up"
                android:textColor="@color/colorResetPasswordWhite"
                android:textSize="26sp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/firstName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/sign_up_first_name"
                android:inputType="textCapWords"
                app:met_baseColor="@color/colorResetPasswordWhite"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorResetPasswordWhite"
                app:met_textColorHint="@color/colorResetPasswordWhite"
                app:met_underlineColor="@color/colorLoginWhite" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/lastName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:hint="@string/sign_up_last_name"
                android:inputType="textCapWords"
                app:met_baseColor="@color/colorResetPasswordWhite"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorResetPasswordWhite"
                app:met_textColorHint="@color/colorResetPasswordWhite"
                app:met_underlineColor="@color/colorLoginWhite" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:hint="@string/reset_password_hint_email"
                android:inputType="textEmailAddress"
                app:met_baseColor="@color/colorResetPasswordWhite"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorResetPasswordWhite"
                app:met_textColorHint="@color/colorResetPasswordWhite"
                app:met_underlineColor="@color/colorLoginWhite" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:hint="@string/login_hint_username"
                android:inputType="textNoSuggestions"
                app:met_baseColor="@color/colorResetPasswordWhite"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorResetPasswordWhite"
                app:met_textColorHint="@color/colorResetPasswordWhite"
                app:met_underlineColor="@color/colorLoginWhite" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:fontFamily="sans-serif"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                app:met_baseColor="@color/colorResetPasswordWhite"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorResetPasswordWhite"
                app:met_textColorHint="@color/colorResetPasswordWhite"
                app:met_underlineColor="@color/colorLoginWhite" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/confirmPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:fontFamily="sans-serif"
                android:hint="@string/sign_up_confirm_password"
                android:inputType="textPassword"
                app:met_baseColor="@color/colorResetPasswordWhite"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorResetPasswordWhite"
                app:met_textColorHint="@color/colorResetPasswordWhite"
                app:met_underlineColor="@color/colorLoginWhite" />

            <TextView
                android:id="@+id/terms"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sign_up_terms"
                android:textColor="@color/colorLoginWhite"
                android:textSize="15sp" />

            <Button
                android:id="@+id/signUpBtn"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/rounded_corner_login"
                android:text="@string/sign_up"
                android:textColor="#fff" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>