<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    android:padding="20dp">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/change_password_current"
        android:inputType="textPassword"
        app:met_baseColor="@color/colorLightBlack"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorPrimary"
        app:met_textColorHint="#808080"
        app:met_underlineColor="#efefef" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/newPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:hint="@string/change_password_new"
        android:inputType="textPassword"
        app:met_baseColor="@color/colorLightBlack"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorPrimary"
        app:met_textColorHint="#808080"
        app:met_underlineColor="#efefef" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/confirmPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@null"
        android:hint="@string/sign_up_confirm_password"
        android:inputType="textPassword"
        app:met_baseColor="@color/colorLightBlack"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorPrimary"
        app:met_textColorHint="#808080"
        app:met_underlineColor="#efefef" />
</LinearLayout>