<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/normalLoginView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/login_login_view_padding_left"
        android:layout_marginRight="@dimen/login_login_view_padding_right"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_logo_height"
            android:layout_marginBottom="@dimen/login_logo_margin_bottom"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_username_margin_top"
            android:background="@null"
            android:drawableLeft="@drawable/ic_action_perm_identity_transparent"
            android:drawablePadding="7dp"
            android:hint="@string/login_hint_username"
            android:inputType="textEmailAddress"
            android:textColor="#fff"
            android:textColorHint="@color/colorLoginWhite"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/login_username_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorLoginWhite" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_password_margin_bottom"
            android:layout_marginTop="@dimen/login_password_margin_top">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableLeft="@drawable/ic_action_https"
                android:drawablePadding="7dp"
                android:fontFamily="sans-serif"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                android:textColor="#fff"
                android:textColorHint="@color/colorLoginWhite"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/login_password_text_size" />

            <TextView
                android:id="@+id/forgottenPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="@dimen/login_forgot_password_margin_bottom"
                android:gravity="right"
                android:padding="@dimen/login_forgot_password_padding"
                android:text="@string/login_forgotten_password"
                android:textColor="@color/colorLoginWhite"
                android:textSize="@dimen/login_forgot_password_text_size" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_login"
            android:orientation="vertical">

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="sans-serif-medium"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="@dimen/login_login_button_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_or_separator_margin_bottom"
            android:layout_marginTop="@dimen/login_or_separator_margin_top"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#33ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_or_margin_left"
                android:layout_marginRight="@dimen/login_or_margin_left"
                android:text="@string/login_or"
                android:textColor="#aaffffff"
                android:textSize="@dimen/login_or_text_size" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#33ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_login_facebook"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/loginFacebookBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:fontFamily="sans-serif-medium"
                android:text="@string/login_facebook"
                android:textColor="#fff"
                android:textSize="@dimen/login_facebook_button_text_size" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/login_sign_up_margin_bottom"
        android:gravity="center"
        android:padding="@dimen/login_sign_up_padding"
        android:text="@string/login_sign_up_prompt"
        android:textColor="@color/colorLoginWhite"
        android:textSize="@dimen/login_sign_up_text_size" />
</RelativeLayout>